--- a/Extension/webext-instrumentation/package.json
+++ b/Extension/webext-instrumentation/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0-or-later",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
-  "module": "build/module/index.js",
+  "//module": "build/module/index.js",
   "repository": "https://github.com/mozilla/OpenWPM",
   "homepage": "https://github.com/mozilla/OpenWPM/tree/master/Extension/webext-instrumentation",
   "keywords": [],
